--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <h4 class="header-subtitle header-subtitle2 header-subtitle3" style="font-family: 'Times New Roman', Times, serif;">Hello, I am</h4>
                 <h2 class="header-title header-title2 header-title3" style="font-family: 'Times New Roman', Times, serif;">Nahuel Rios Cabrejas</h2>
                 <h6 class="header-mono header-mono2 header-mono3" style="font-family: 'Times New Roman', Times, serif;" >Administrator | Cybersecurity</h6>
-                <a href="./assets/docs/Rios Cabrejas, Nahuel - CV.pdf" download class="btn btn-primary btn-rounded">
+                <a href="./assets/docs/RiosCabrejasNahuel_CV.pdf" download class="btn btn-primary btn-rounded">
                     <i class="ti-printer pr-2" ></i>Download CV 
                 </a>
                 <ul class="custom-social-icons">
