--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         downloadButton.addEventListener("click", (event) => {
             event.preventDefault(); // Evita el comportamiento por defecto del botón
             alert("🎉 Thank you for looking at my CV! 🎉"); // Mensaje emergente personalizado
-            window.location.href = "./assets/docs/Rios Cabrejas, Nahuel - CV"; // Redirige a la descarga
+            window.location.href = "./assets/docs/RiosCabrejasNahuel_CV.pdf; // Redirige a la descarga
         });
         
         // Animación de "pulse" para el botón de descarga (resaltado suave)
