--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <h5 class="mb-3">A CiberSecurity Administrator / And Ethical Hacking</h5>
                 <p class="mt-20">I am a Cybersecurity Administrator dedicated to protecting data and hardening systems against digital threats.</p>
                 <button class="btn btn-outline-danger">
-                    <a href="./assets/docs/Rios Cabrejas, Nahuel - CV.pdf" download style="text-decoration: none; color: inherit;">
+                    <a href="./assets/docs/RiosCabrejasNahuel_CV.pdf" download style="text-decoration: none; color: inherit;">
                         <i class="icon-down-circled2"></i>Download My CV
                     </a>
                 </button>
